# blazeui

./: CMakeLists.txt  README.md
.github/workflows/: cmake-build.yml
examples/: CMakeLists.txt
examples/Pong/: main.cpp
include/Blaze/: Blaze.h  Events.h  Game.h  Graphics.h  Macros.h  Math.h  Widgets.h
src/: Blaze.cpp  Game.cpp  Widgets.cpp  pch.h
src/Game/: Events.cpp  Game.cpp
src/Graphics/: Graphics.cpp
src/Graphics/Software/: SoftwareRenderer.cpp  SoftwareRenderer.h
src/Gui/: Widgets.cpp
